# RigidAlignment

./: CMakeLists.txt  Common.cmake  README.md  RigidAlignment.cxx  RigidAlignment.xml  RigidAlignment.xml.in  RigidAlignmentImpl.cpp  RigidAlignmentImpl.h  dirent.c  newuoa.h
src/: CMakeLists.txt  RigidAlignment.cpp  RigidAlignment.h  newuoa.h
wrapper/: CMakeLists.txt  RigidWrapper.cpp  RigidWrapper.cxx  RigidWrapper.xml
